Fixed board overflow

--- a/chess_webapp/static/css/app.css
+++ b/chess_webapp/static/css/app.css
@@ -9,13 +9,53 @@
 }
 
 .chess_board {
-    width: 560px;
     display: grid;
     grid-gap: 0;
     grid-template-columns: repeat(8, 70px);
     grid-template-rows: repeat(8, 70px);
     grid-auto-flow: row;
 }
+@media only screen and (max-height: 1000px)  {
+    .chess_board {
+        grid-template-columns: repeat(8, 60px);
+        grid-template-rows: repeat(8, 60px);
+    }
+    .chess_board > div > img {
+        height: 50px;
+        width: 50px;
+    }
+}
+@media only screen and (max-height: 900px)  {
+    .chess_board {
+        grid-template-columns: repeat(8, 50px);
+        grid-template-rows: repeat(8, 50px);
+    }
+    .chess_board > div > img {
+        height: 40px;
+        width: 40px;
+    }
+}
+@media only screen and (max-height: 800px)  {
+    .chess_board {
+        grid-template-columns: repeat(8, 40px);
+        grid-template-rows: repeat(8, 40px);
+    }
+    .chess_board > div > img {
+        height: 30px;
+        width: 30px;
+    }
+}
+@media only screen and (max-height: 700px)  {
+    .chess_board {
+        grid-template-columns: repeat(8, 30px);
+        grid-template-rows: repeat(8, 30px);
+    }
+    .chess_board > div > img {
+        height: 20px;
+        width: 20px;
+    }
+}
+
 .chess_info > div {
     display: block;
     margin: auto;
